--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -1,10 +1,14 @@
+.carousel-track {
+  height: 100%;
+  overflow: hidden;
+}
+
 .carousel {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   height: 100%;
   list-style: none;
-  transition: 0.5s;
 }
 
 .carousel__item {
@@ -13,7 +17,7 @@
   align-items: center;
   flex-shrink: 0;
   flex-grow: 1;
-  width: 88%;
+  width: 100vw;
   height: 100%;
-  margin: 0 6%;
+  padding: 0 3%;
 }
