--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -3,12 +3,23 @@
   overflow: hidden;
 }
 
+.carousel-move-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  cursor: grab;
+}
+
 .carousel {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   height: 100%;
   list-style: none;
+  transition: 0.5s;
 }
 
 .carousel__item {
