--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -19,7 +19,7 @@
   align-items: center;
   height: 100%;
   list-style: none;
-  /* transition: 0.5s; */
+  transition: 0.3s;
 }
 
 .carousel__item {
