--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,7 @@
 .app {
   position: relative;
-  display: grid;
-  height: 100%;
-  grid-template-rows: 95vh 1fr;
+  display: flex;
   height: 100vh;
+  padding: 2% 0;
   overflow: hidden;
 }
