--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -1,8 +1,37 @@
 .pagination {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  box-shadow: 2px 0 3px 0 grey;
+}
+
+.pagination__btn {
   position: relative;
   z-index: 99999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 2px 0 3px 0 grey;
+  height: 100%;
+  width: 8%;
+  font-size: 20px;
+  color: transparent;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.pagination__btn:hover {
+  color:white;
+  text-shadow: 0 0 5px grey;
+}
+
+.pagination__btn:first-child:hover {
+  background: linear-gradient(268deg, rgba(0,0,0,0.04805672268907568) 0%, rgba(0,0,0,0.058140756302521) 35%, rgba(0,0,0,0.064861694677871145) 64%);
+}
+
+.pagination__btn:last-child:hover {
+  background: linear-gradient(87deg, rgba(0,0,0,0.04805672268907568) 0%, rgba(0,0,0,0.058140756302521) 35%, rgba(0,0,0,0.064861694677871145) 64%);
 }
