--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 .app {
   position: relative;
   display: flex;
+  justify-content: center;
   height: 100vh;
   padding: 2% 0;
   overflow: hidden;
