--- a/src/components/PageTracker/page-tracker.css
+++ b/src/components/PageTracker/page-tracker.css
@@ -27,6 +27,11 @@
   border: 1px solid rgb(223, 221, 221);
   box-shadow: 0 0 5px 0 grey;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.page-tracker__round:hover {
+  box-shadow: inset 0 0 5px 0 rgb(201, 201, 201);
 }
 
 .page-tracker__round--current {
