--- a/src/components/PageTracker/page-tracker.css
+++ b/src/components/PageTracker/page-tracker.css
@@ -46,4 +46,16 @@
   width: 30px;
   height: 25px;
   text-align: center;
+  color: #c5c5c5;
+  text-shadow: 0 0 1px rgb(92, 92, 92);
+  font-weight: 700;
+  border: 1px solid rgb(223, 221, 221);
+  box-shadow: 0 0 5px 0 grey;
+  border-radius: 5px;
+  outline: none;
+  background: transparent;
+}
+
+.page-tracker__input:focus {
+  box-shadow: inset 0 0 5px 0 rgb(201, 201, 201);
 }
