--- a/src/components/PageTracker/page-tracker.css
+++ b/src/components/PageTracker/page-tracker.css
@@ -1,7 +1,7 @@
 .page-tracker {
   position: absolute;
-  bottom: 0;
-  z-index: 99999;
+  bottom: 5px;
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
